navbar toolbar alakítgatás

--- a/src/app/publikus/components/toolbar/toolbar.component.html
+++ b/src/app/publikus/components/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
   
     <span>
       <a class="navbar-brand cim" [routerLink]="[globalisValtozok.KEZDOLAP_PREF]" [matTooltip]="'kezdolap' | translate">
-        <span *ngIf="!isScreenSmall" >{{"konyvtaras_alkalmazas" | translate}}</span>
+        <span *ngIf="!isScreenSmall" >{{"cim" | translate}}</span>
       </a>
     </span>
   
