--- a/src/app/publikus/components/navbar/navbar.component.html
+++ b/src/app/publikus/components/navbar/navbar.component.html
@@ -1,24 +1,20 @@
-<mat-sidenav-container class="sidenav-container" [class.dark-theme]="isDarkTheme" fxFlex autosize>
+<mat-sidenav-container class="sidenav-container" fxFlex autosize>
     <mat-sidenav #sidenav class="sidenav mat-elevation-z8 p-0" [opened]="false" [mode]="isScreenSmall2 ? 'over' : 'side'">
   
       <mat-nav-list>
-        <mat-divider style="margin: 7%;"></mat-divider>
         <mat-list-item *ngIf="isScreenSmall" matLine [routerLink]="[globalisValtozok.KEZDOLAP_PREF]" routerLinkActive="selected"
           (click)="isScreenSmall2?sidenav.toggle():{}">
           {{"kezdolap" | translate}}
         </mat-list-item>
         
-        
-  
       </mat-nav-list>
     </mat-sidenav>
   
     <div class="app-sidenav-content">
       <div class="wrapper">
-        <app-toolbar 
-          (toggleSidenav)="sidenav.toggle()" [isScreenSmall]="isScreenSmall"
+        <app-toolbar (toggleSidenav)="sidenav.toggle()" [isScreenSmall]="isScreenSmall"
           [isScreenSmall2]="isScreenSmall2"></app-toolbar>
-        <router-outlet class="router-outlet"></router-outlet>
+        <router-outlet></router-outlet>
       </div>
         <div class="footer">
           <app-footer></app-footer>
