emailes bejelentkezes már működik

--- a/src/app/publikus/components/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/publikus/components/bejelentkezes/bejelentkezes.component.html
@@ -1,1 +1,14 @@
-<p>bejelentkezes works!</p>
+<button (click)="bejeletkezesEmail()">
+    <mat-icon>account_circle</mat-icon>
+    <span>Bejelentkezés emaillel</span>
+</button>
+
+<button (click)="bejeletkezesGoogle()">
+    <mat-icon>account_circle</mat-icon>
+    <span>Bejelentkezés googlelel</span>
+</button>
+
+<button (click)="bejeletkezesFacebook()">
+    <mat-icon>account_circle</mat-icon>
+    <span>Bejelentkezés facebookkal</span>
+</button>
