--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,12 @@ html, body {
 .italic{
   font-style: italic;
 }
+
+//bejelentkezés és regisztráció formok stílusa
+.bejelentkezes-regisztracio-container{
+  width: 70%;
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  padding: 5px;
+}
