--- a/src/app/publikus/components/toolbar/toolbar.component.html
+++ b/src/app/publikus/components/toolbar/toolbar.component.html
@@ -18,7 +18,7 @@
   
    
   
-    <button  mat-button [matTooltip]="'kijelentkezes' | translate" (click)="kijelentkezes()" >
+    <button  *ngIf="belepett" mat-button [matTooltip]="'kijelentkezes' | translate" (click)="kijelentkezes()" >
       <mat-icon aria-hidden="false">power_settings_new</mat-icon>
     </button>
   
