--- a/src/app/publikus/components/toolbar/toolbar.component.html
+++ b/src/app/publikus/components/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <span>
-    <a class="navbar-brand title" [routerLink]="[globalVariables.HOME_PREFIX]" [matTooltip]="'homepage' | translate">
+    <a class="navbar-brand title" [routerLink]="[globalVariables.HOME_PREFIX]" [matTooltip]="'home' | translate">
       <span *ngIf="!isScreenSmall">{{ "title" | translate }}</span>
     </a>
   </span>
