--- a/src/app/publikus/components/login/login.component.html
+++ b/src/app/publikus/components/login/login.component.html
@@ -49,7 +49,7 @@
   <div class="center" style="display: inline-block;">
       <p>{{ "no_account" | translate }}</p>
       <a [routerLink]="'/' + globalVariables.SIGNUP_ROUTE">
-          {{ "registration" | translate }}
+          {{ "signup" | translate }}
       </a>
   </div>
 </div>
