--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,17 +4,17 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-$hatterszin: rgb(103, 96, 59);
+$background_color: rgb(193, 108, 186);
 
 html, body {
-  background-color: $hatterszin !important;
+  background-color: $background_color !important;
   height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif !important;
 }
 
 .toolbar, .sidenav-container, .sidenav {
-  background-color: $hatterszin !important;
+  background-color: $background_color !important;
 }
 
 :root {
@@ -50,19 +50,15 @@ html, body {
   --mat-mdc-snack-bar-button-color: var(--white-color);
 }
 
-
-//félkövér betűstílus
 .bold{
   font-weight: bold;
 }
 
-//dőlt betűstílus
 .italic{
   font-style: italic;
 }
 
-//bejelentkezés és regisztráció formok stílusa
-.bejelentkezes-regisztracio-container{
+.login-signup-container{
   width: 70%;
   display: block;
   margin: auto;
