home + forgot password

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,1 +1,5 @@
 <p>home works!</p>
+TODO: 
+collectionbe úgy menteni a dokumentumot hogy vele együtt az id-t is <br>
+google-lel bejelentkezés után a felhasználói adatokat menteni a collectionbe<br>
+adott id-hez menteni dolgokat<br>
