--- a/src/app/publikus/components/signup/signup.component.html
+++ b/src/app/publikus/components/signup/signup.component.html
@@ -69,7 +69,7 @@
 
   <div class="center" style="display: inline-block;">
       <p>{{ "already_have_account" | translate }}</p>
-      <a [routerLink]="'/' + globalVariables.LOGIN_ROUTE">
+      <a [routerLink]="'/' + globalVariables.ROUTES.login">
           {{ "login" | translate }}
       </a>
   </div>
