--- a/src/app/hobbies/components/hobby-list/hobby-list.component.html
+++ b/src/app/hobbies/components/hobby-list/hobby-list.component.html
@@ -1,6 +1,8 @@
 <div class="hobby-list">
-    <h2>{{"hobby_list" | translate}}</h2>
-  <div class="hobby-tile" *ngFor="let hobby of hobbies">
-    <app-hobby-tile [hobby]="hobby"></app-hobby-tile>
+  <h2>{{ "hobby_list" | translate }}</h2>
+  <div class="hobby-tile-container">
+    <div class="hobby-tile" *ngFor="let hobby of hobbies">
+      <app-hobby-tile [hobby]="hobby"></app-hobby-tile>
+    </div>
   </div>
 </div>
