--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.scss
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.scss
@@ -1,31 +1,35 @@
 .hobby-tile {
-    border: 1px solid black;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 10px;
-    width: 300px;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: #e99eeb;
-  }
-  
-  .content {
-    position: relative;
-  }
-  
-  .tile-image {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  .icon-button {
-    margin-right: 5px;
-    color: #333;
-  }
-  
+  border: 1px solid black;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 10px;
+  width: 300px;
+  transition: transform 0.3s ease;
+}
+
+.hobby-tile:hover {
+  transform: scale(1.1);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #e3e0b8;
+}
+
+.content {
+  position: relative;
+}
+
+.tile-image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.icon-button {
+  margin-right: 5px;
+  color:black;
+}
