--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="hobby" class="hobby-tile" [matTooltip]="hobby.description">
+<div *ngIf="hobby" class="hobby-tile" [matTooltip]="hobby.description | bilingualTranslate">
     <div class="header">
-      <h2>{{ hobby.name }}</h2>
+      <h2>{{ hobby.name | bilingualTranslate}}</h2>
       <button mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate">
         <mat-icon>add</mat-icon>
       </button>
     </div>
     <div class="content">
-      <img [src]="hobby.imageUrl" alt="{{ hobby.name }} image" class="tile-image" />
+      <img [src]="hobby.imageUrl" alt="{{ hobby.name | bilingualTranslate}} image" class="tile-image" />
     </div>
   </div>
   
