--- a/src/app/publikus/components/login/login.component.html
+++ b/src/app/publikus/components/login/login.component.html
@@ -34,7 +34,7 @@
                 </button>
             </div>
             <div class="p-2 bd-highlight" mat-dialog-actions>
-                <button type="button" class="btn btn-danger" (click)="navigateToPreviousPageAfterLogin()">
+                <button type="button" class="btn btn-danger" (click)="userService.navigateToPreviousPageAfterLogin()">
                     {{ "cancel" | translate }}
                 </button>
             </div>
