--- a/src/app/hobbies/components/hobby-list/hobby-list.component.html
+++ b/src/app/hobbies/components/hobby-list/hobby-list.component.html
@@ -2,7 +2,7 @@
   <h2>{{ "hobby_list" | translate }}</h2>
   <div class="hobby-tile-container">
     <div class="hobby-tile" *ngFor="let hobby of hobbies">
-      <app-hobby-tile [hobby]="hobby"></app-hobby-tile>
+      <app-hobby-tile [hobby]="hobby" (addToOwnHobbiesEmitter)="addToOwnHobbies($event)"></app-hobby-tile>
     </div>
   </div>
 </div>
