--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,3 +65,15 @@ html, body {
   margin-top: 15px;
   padding: 5px;
 }
+
+.hobby-list {
+  margin: 15px;
+}
+
+.hobby-tile-container {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
