recordhobby és service workerek telepítés

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,2 +1,3 @@
 TODO: 
 collectionbe úgy menteni a dokumentumot hogy vele együtt az id-t is <br>
+addtocollectin adja vissza hogy sikeres volt-e a mentés és ezt pl recordhobbinál felhasználni -> csak akkor close dialog<br>
