--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="hobby" class="hobby-tile" [matTooltip]="hobby.description | bilingualTranslate">
     <div class="header header-colored">
       <h2>{{ hobby.name | bilingualTranslate}}</h2>
-      <button *ngIf="addButton" mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate"
+      <button mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate"
          (click)="addToOwnHobbies()">
         <mat-icon>add</mat-icon>
       </button>
